--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.13.0",
     "react-wrap-balancer": "^1.1.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "sooner": "^1.1.4",
